# artemis

./: README.md
artemis/: CMakeLists.txt  package.xml
artemis_arduino/: artemis_arduino.ino
artemis_control/: CMakeLists.txt  package.xml
artemis_control/config/: artemis_control.yaml
artemis_control/include/artemis_control/: artemis_hw_interface.h
artemis_control/launch/: artemis_arduino_test.launch  artemis_control.launch
artemis_control/src/: artemis_hw_interface.cpp  artemis_node.cpp
artemis_description/: CMakeLists.txt  package.xml
artemis_description/launch/: artemis.rviz  artemis_description.launch  artemis_rviz.launch
artemis_description/urdf/: artemis.xacro
artemis_gazebo/: CMakeLists.txt  package.xml
artemis_gazebo/launch/: artemis_world.launch
artemis_gazebo/worlds/: artemis.world
