<?xml version="1.0"?>
<package>
  <name>artemis</name>
  <version>0.0.0</version>
  <description>The artemis metapackage</description>

  <maintainer email="gerikzatorski@gmail.com">Gerik Zatorski</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
