<?xml version="1.0"?>
<package>
  <name>artemis_control</name>
  <version>0.0.0</version>
  <description>Artemis hardware interface</description>

  <maintainer email="gerikzatorski@gmail.com">Gerik Zatorski</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  
  <export></export>
  
</package>
