<package>
  <name>artemis_gazebo</name>
  <version>0.0.0</version>
  <description>artemis_gazebo</description>
  <maintainer email="gerikzatorski@gmail.com">Gerik Zatorski</maintainer>

  <license>MIT</license>

  <author email="gerikzatorski@gmail.com">Gerik Zatorski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>artemis_control</run_depend>
  <run_depend>artemis_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
